<resources>
    <string name="app_name">ReportCity</string>
    <string name="register">Registar</string>
    <string name="login">Iniciar Sessão</string>
    <string name="saveSession">Guardar sessão</string>
    <string name="addNote">Adicionar Nota</string>
    <string name="title_activity_add_note">Notas</string>
    <string name="title_activity_edit_note">Editar Nota</string>
    <string name="seeNotes">Notas</string>

    <string name="title">Titulo</string>
    <string name="description">Descrição</string>

    <string name="menu_notas_add">Adicionar nota</string>
    <string name="menu_notas_cancel">Voltar atrás</string>
    <string name="menu_notas_see_all">Ver notas</string>

    <string name="report_edit">Editar</string>
    <string name="report_delete">Eliminar</string>
    <string name="reportName">Nome da situação</string>
    <string name="reportAdress">Morada da situação</string>
    <string name="reportDescription">Descrição da situação</string>
    <string name="menu_report_add">Adicionar situação</string>
    <string name="menu_report_cancel">Voltar atrás</string>


    <string name="sharedLogin" translatable="false">sharedLogin</string>
    <string name="idLogin" translatable="false">idLogin</string>
    <string name="userLogin" translatable="false">userLogin</string>
    <string name="userLocation" translatable="false">userLocation</string>


    <string name="menu_map" translatable="false">Mapa</string>
    <string name="menu_logout" translatable="false">Terminar Sessão</string>


    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="title_activity_drawer_nav" translatable="false">drawerNav</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="menu_report" translatable="false">Situações reportadas</string>
    <string name="menu_report_my" translatable="false">Minhas Situações</string>
    <string name="menu_one_report" translatable="false">Situação</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
</resources>