<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_map">

    <fragment
        android:id="@+id/nav_map"
        android:name="com.example.reportcity.MapsFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_maps" />


    <fragment
        android:id="@+id/nav_report"
        android:name="com.example.reportcity.ui.reportsAll.ReportsAllFragment"
        android:label="@string/menu_report"
        tools:layout="@layout/fragment_reports" />

    <fragment
        android:id="@+id/nav_my_reports"
        android:name="com.example.reportcity.ui.reports.ReportsFragment"
        android:label="@string/menu_report_my"
        tools:layout="@layout/fragment_my_reports" >
    </fragment>

    <fragment
        android:id="@+id/nav_one_report"
        android:name="com.example.reportcity.ui.reportsOne.reportOne"
        android:label="@string/menu_one_report"
        tools:layout="@layout/report_one_fragment" >
        <argument android:name="idReport" app:argType="integer" />
    </fragment>

</navigation>