<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

            <ImageView
                android:id="@+id/userLoginImg"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/thirtyDP"
                tools:srcCompat="@drawable/account_circle_24" />


        <EditText
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tenDP"
            android:layout_gravity="center"
            android:minWidth="300dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:minWidth="300dp"
            android:ems="10"
            android:inputType="textPassword" />

        <CheckBox
            android:id="@+id/checkboxSaveSession"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:minWidth="300dp"
            android:text="@string/saveSession" />

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tenDP"
            android:layout_gravity="center"
            android:minWidth="300dp"
            android:text="@string/login" />

        <Button
            android:id="@+id/addNote"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/thirtyDP"
            android:text="@string/seeNotes" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>